Adicionei a apágina de Sobre

--- a/Interface/templates/base.html
+++ b/Interface/templates/base.html
@@ -21,7 +21,7 @@
                     <ul class="nav navbar-nav">
                         <li id="mapa"><a href="{% url "home" %}">Mapa</a></li>
                         <li id="local"><a href="{% url "local" %}">Análise Local</a></li>
-{#                        <li><a href="{% url "contact" %}">Fale Conosco</a></li>#}
+                        <li><a href="{% url "sobre" %}">Sobre</a></li>
 
                     </ul>
                 </div>
