adicionei um mini-about

--- a/Interface/templates/sobre.html
+++ b/Interface/templates/sobre.html
@@ -4,5 +4,9 @@
 {% block title %}Sobre o Simulador{% endblock %}
 
 {% block content %}
+<p>Este simulador foi desenvolvido pela Escola de Matemática Aplicada da Fundação Getúlio Vargas</p>
+
+<p>As previsões do simulador são calculadas tendo por base os modelos matemáticos que mais bem representam as conclusões que derivamos do estudo do fenômeno da genealogia do conflito. Não é possível, contudo, garantir total acurácia das previsões apresentadas, haja vista às incertezas inescapáveis a trabalhos de previsão numérica desta natureza.</p>
+
 
 {% endblock %}
